--- a/UEVR/MainWindow.xaml
+++ b/UEVR/MainWindow.xaml
@@ -71,7 +71,7 @@
                                 </materialDesign:PackIcon>
                             </StackPanel>
                         </MenuItem.Header>
-                        <TextBlock TextWrapping="Wrap" Text="Author: praydog"/>
+                        <TextBlock TextWrapping="Wrap" Text="作者: praydog"/>
 
                         <MenuItem Header="_Documentation" Click="Documentation_Clicked">
                         </MenuItem>
@@ -84,7 +84,7 @@
                             <StackPanel Width="75">
                                 <materialDesign:PackIcon Kind="Folder" HorizontalAlignment="Center" Height="30" Width="30">
                                 </materialDesign:PackIcon>
-                                <TextBlock Text="Open Global Dir" HorizontalAlignment="Center" FontSize="10"/>
+                                <TextBlock Text="打开全局目录" HorizontalAlignment="Center" FontSize="10"/>
                             </StackPanel>
                         </MenuItem.Header>
                     </MenuItem>
@@ -93,7 +93,7 @@
                             <StackPanel Width="75">
                                 <materialDesign:PackIcon Kind="Folder" HorizontalAlignment="Center" Height="30" Width="30">
                                 </materialDesign:PackIcon>
-                                <TextBlock Text="Open Game Dir" HorizontalAlignment="Center" FontSize="10"/>
+                                <TextBlock Text="打开游戏目录" HorizontalAlignment="Center" FontSize="10"/>
                             </StackPanel>
                         </MenuItem.Header>
                     </MenuItem>
@@ -110,7 +110,7 @@
                                         </TransformGroup>
                                     </materialDesign:PackIcon.RenderTransform>
                                 </materialDesign:PackIcon>
-                                <TextBlock Text="Export Config" HorizontalAlignment="Center" FontSize="10"/>
+                                <TextBlock Text="导出配置" HorizontalAlignment="Center" FontSize="10"/>
                             </StackPanel>
                         </MenuItem.Header>
                     </MenuItem>
@@ -119,13 +119,13 @@
                             <StackPanel Width="75">
                                 <materialDesign:PackIcon Kind="Import"  HorizontalAlignment="Center" Height="30" Width="30" RenderTransformOrigin="0.5,0.5">
                                 </materialDesign:PackIcon>
-                                <TextBlock Text="Import Config" HorizontalAlignment="Center" FontSize="10"/>
+                                <TextBlock Text="导入配置" HorizontalAlignment="Center" FontSize="10"/>
                             </StackPanel>
                         </MenuItem.Header>
                     </MenuItem>
                 </Menu>
                 <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-                    <TextBlock TextWrapping="Wrap" Text="Author: praydog"/>
+                    <TextBlock TextWrapping="Wrap" Text="作者: praydog"/>
                 </StackPanel>
                 <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                     <Button Margin="5" Click="GitHub_Clicked" Background="Transparent" BorderThickness="0,0,0,0" RenderOptions.BitmapScalingMode="HighQuality" Height="40">
@@ -140,14 +140,14 @@
                 </StackPanel>
             </DockPanel>
             <StackPanel x:Name="m_topStackPanel" Orientation="Vertical">
-                <GroupBox x:Name="m_nNotificationsGroupBox" Header="Notifications" ClipToBounds="True" Visibility="Collapsed">
+                <GroupBox x:Name="m_nNotificationsGroupBox" Header="通知" ClipToBounds="True" Visibility="Collapsed">
                     <StackPanel>
-                        <TextBlock x:Name="m_adminExplanation" TextWrapping="Wrap" Text="Some executables may not show up or fail to inject unless started as Administrator." Visibility="Collapsed"/>
+                        <TextBlock x:Name="m_adminExplanation" TextWrapping="Wrap" Text="除非以管理员身份启动，否则某些可执行文件可能不会显示或无法注入。" Visibility="Collapsed"/>
                         <Button x:Name="m_restartAsAdminButton" Content="Restart as Administrator" Click="RestartAsAdminButton_Click" Visibility="Collapsed"/>
                     </StackPanel>
                 </GroupBox>
                 <StackPanel Orientation="Horizontal">
-                    <GroupBox Header="Inject" ClipToBounds="True">
+                    <GroupBox Header="注入" ClipToBounds="True">
                         <StackPanel ClipToBounds="True" HorizontalAlignment="Left">
                             <ComboBox x:Name="m_processListBox" DropDownOpened="ComboBox_DropDownOpened" SelectionChanged="ComboBox_SelectionChanged" VerticalAlignment="Top" MinWidth="500"/>
                             <Button x:Name="m_injectButton" Content="Inject" Click="Inject_Clicked"/>
@@ -156,14 +156,14 @@
                                 <RadioButton x:Name="m_openxrRadio" Content="OpenXR"/>
                                 <StackPanel Orientation="Horizontal">
                                     <ToggleButton x:Name="m_nullifyVRPluginsCheckbox" HorizontalAlignment="Left"/>
-                                    <TextBlock TextWrapping="Wrap" Text="Nullify VR Plugins"/>
+                                    <TextBlock TextWrapping="Wrap" Text="取消 VR 插件"/>
                                 </StackPanel>
                             </StackPanel>
-                            <TextBlock x:Name="m_connectionStatus" TextWrapping="Wrap" Text="Unknown status"/>
+                            <TextBlock x:Name="m_connectionStatus" TextWrapping="Wrap" Text="未知状态"/>
                         </StackPanel>
                     </GroupBox>
                 </StackPanel>
-                <GroupBox Header="Game Settings" ClipToBounds="True">
+                <GroupBox Header="游戏设置" ClipToBounds="True">
                     <ListView x:Name="m_iniListView" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" MaxHeight="640">
                         <ListView.Resources>
                             <DataTemplate x:Key="ComboBoxTemplate">
@@ -189,8 +189,8 @@
 
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Key" Width="200" CellTemplate="{StaticResource KeyTemplate}"/>
-                                <GridViewColumn Header="Value" Width="150" CellTemplateSelector="{StaticResource valueTemplateSelector}"/>
+                                <GridViewColumn Header="键" Width="200" CellTemplate="{StaticResource KeyTemplate}"/>
+                                <GridViewColumn Header="值" Width="150" CellTemplateSelector="{StaticResource valueTemplateSelector}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
